syntax = "proto3";

package blog;

service BlogService {
  rpc CreateBlog (BlogRequest) returns (BlogResponse);
  rpc GetBlogs (Empty) returns (BlogList);
}

message Empty {}

message BlogRequest {
  string title = 1;
  string content = 2;
}

message BlogResponse {
  string message = 1;
}

message BlogItem {
  string id = 1;
  string title = 2;
  string content = 3;
  string authorId = 4;
}

message BlogList {
  repeated BlogItem blogs = 1;
}
